# Cnki-Mcp

./: CONFIG_GUIDE.md  IMPLEMENTATION_REPORT.md  PROJECT_COMPLETION_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  UpGrade.md  UpGrade_v2.md  check_page_structure.py  current_page.html  page_structure.html  pyproject.toml  run_security_test.bat  run_security_test.ps1  test_new_features.py
SourcePage/: 中国知网-文献管理中心.html  中国知网.html  安全验证.html  检索-中国知网.html  视为无法下载.html  让文物“活”起来：AI驱动下的黑龙江文物智能传播研究 - 中国知网.html
SourcePage/中国知网-文献管理中心_files/: GlobalVar.js.下载  KIndex.css  Message.js.下载  cachespace.js.下载  cnkisug.js.下载  collect.js.下载  ecpucard.js.下载  etlogin.js.下载  footer.js.下载  index.umd.min.js.下载  layer.css  layout.css  login.js.下载  loginhead.js.下载  manage.center.js.下载  manage.print.js.下载  public.css  request.js.下载  searchbar.js.下载  tgJCap.f3346892.js.下载  top.js.下载  wordsGuid.js.下载
SourcePage/中国知网_files/: TJCaptcha.js.下载  cnkisug.min.js.下载  ecpAgreementAlertHandle.js.下载  ecpAgreementAlertLink.js.下载  (+13 more)
config/: config.json
docs/: DEADLOCK_ANALYSIS_AND_FIXES.md  DOM_SELECTORS.md  INIT_OPTIMIZATION.md  INIT_OPTIMIZATION_V2.md  OPTIMIZATION_SUMMARY.md  PAGE_SIZE_CONTROL.md  STATISTICS_OPTIMIZATION.md  TEST_SUMMARY.md  UPGRADE_STRATEGY_V3.md  plan.md
tests/: README.md  author_search_page.html  debug_selectors.py  debug_title_selector.py  run_test.bat  run_test.sh  search_page_after_click.html  search_result_page.html  search_result_with_buttons.html  test_complete.py  test_download.py  test_download_integration.py  test_mcp_service.py  test_quick.py  test_statistics.py
(+75 files in other folders)
