[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnki-mcp"
version = "0.2.0"
description = "CNKI (China National Knowledge Infrastructure) MCP Server with intelligent navigation and batch operations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CNKI MCP Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cnki-mcp = "cnki_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cnki_mcp"]
